# mtsj_os

./: OK01.s  README.md  adresses.txt
source/: 1  boot.S  kernel.c
v-001/: Cargo.toml
v-001/src/: bsp.rs  main.rs
v-001/src/_arch/aarch64/cpu/: boot.S  boot.rs
v-001/src/bsp/raspberrypi/: kernel.ld
v-001/src/cpu/: boot.rs
