[package]
name = "v-001"
version = "0.1.0"
edition = "2021"
authors = ["Mateus Ramos"]

[profile.release]
lto = true

[features]
defualt = []
bsp_rpi4 = []
bsp_rpi3 = []

[[bin]]
name = "kernel"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
